// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectable Pill should render a selectable pill 1`] = `
<InjectIntl(SelectablePills)
  ariaLabel="Example of a Selectable Pill"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  onSelect={[Function]}
>
  <SelectablePills
    ariaLabel="Example of a Selectable Pill"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={false}
    onSelect={[Function]}
  >
    <div
      aria-label="Example of a Selectable Pill"
      className="pill-list"
      onBlur={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <VisuallyHiddenText
        id="terra-pill-visual-hidden-text"
        text="Terra.pills.pillListHint"
      >
        <span
          className="visually-hidden-text"
          id="terra-pill-visual-hidden-text"
        >
          Terra.pills.pillListHint
        </span>
      </VisuallyHiddenText>
      <InjectIntl(Pill)
        id="selectable-pill"
        isBasicPill={false}
        key=".0"
        label="Selectable Pill"
        onRemove={[Function]}
        onSelect={[Function]}
      >
        <Pill
          id="selectable-pill"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isBasicPill={false}
          label="Selectable Pill"
          onRemove={[Function]}
          onSelect={[Function]}
        >
          <div
            className="pill-container is-focusable is-selectable"
            data-terra-pill={true}
            data-terra-pills-show-focus-styles={true}
            id="selectable-pill"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="pill-label is-selectable"
              onClick={[Function]}
              title=""
            >
              Selectable Pill
            </div>
            <VisuallyHiddenText
              text="Terra.pills.pillHint.selectable"
            >
              <span
                className="visually-hidden-text"
              >
                Terra.pills.pillHint.selectable
              </span>
            </VisuallyHiddenText>
          </div>
        </Pill>
      </InjectIntl(Pill)>
    </div>
  </SelectablePills>
</InjectIntl(SelectablePills)>
`;

exports[`Selectable Pill should render a selectable pill with roll up 1`] = `
<InjectIntl(SelectablePills)
  ariaLabel="Example of a Selectable Pill with roll up"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isSingleLine={true}
  onSelect={[Function]}
>
  <SelectablePills
    ariaLabel="Example of a Selectable Pill with roll up"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={true}
    onSelect={[Function]}
  >
    <div
      aria-label="Example of a Selectable Pill with roll up"
      className="pill-list"
      onBlur={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <VisuallyHiddenText
        id="terra-pill-visual-hidden-text"
        text="Terra.pills.pillListHint"
      >
        <span
          className="visually-hidden-text"
          id="terra-pill-visual-hidden-text"
        >
          Terra.pills.pillListHint
        </span>
      </VisuallyHiddenText>
      <InjectIntl(Pill)
        id="selectable-pill"
        isBasicPill={false}
        key=".0"
        label="Selectable Pill"
        onRemove={[Function]}
        onSelect={[Function]}
      >
        <Pill
          id="selectable-pill"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isBasicPill={false}
          label="Selectable Pill"
          onRemove={[Function]}
          onSelect={[Function]}
        >
          <div
            className="pill-container is-focusable is-selectable"
            data-terra-pill={true}
            data-terra-pills-show-focus-styles={true}
            id="selectable-pill"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="pill-label is-selectable"
              onClick={[Function]}
              title=""
            >
              Selectable Pill
            </div>
            <VisuallyHiddenText
              text="Terra.pills.pillHint.selectable"
            >
              <span
                className="visually-hidden-text"
              >
                Terra.pills.pillHint.selectable
              </span>
            </VisuallyHiddenText>
          </div>
        </Pill>
      </InjectIntl(Pill)>
      <InjectIntl(RollUpPill)
        isSingleLine={true}
        onSelectRollUp={[Function]}
        rollupCount={1}
      >
        <RollUpPill
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isSingleLine={true}
          onSelectRollUp={[Function]}
          rollupCount={1}
        >
          <div
            className="roll-up-pill"
            data-terra-rollup-pill={true}
            data-terra-rollup-pill-show-focus-styles={true}
            id="rollup-pill"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="button"
            tabIndex="0"
          >
            Terra.pills.rollupPillLabel
          </div>
        </RollUpPill>
      </InjectIntl(RollUpPill)>
    </div>
  </SelectablePills>
</InjectIntl(SelectablePills)>
`;
